// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<List /> renders as ol 1`] = `
.c0 {
  padding-left: 28px;
  counter-reset: list-counter;
}

.c0 > li:not(.has-icon):before {
  padding: 0;
  left: -25px;
  display: inline-block;
  position: absolute;
  top: 1px;
  content: counter(list-counter) ". ";
  color: #4A545E;
  font-size: 15px;
}

.c0 > li.has-icon svg {
  padding: 0;
  left: -28px;
  top: 4px;
  display: inline-block;
  position: absolute;
  width: 16px;
  height: 16px;
}

<ol
  class="c0"
>
  <li>
    I am a list item
  </li>
</ol>
`;

exports[`<List /> renders as ul 1`] = `
.c0 {
  padding-left: 28px;
  counter-reset: list-counter;
}

.c0 > li:not(.has-icon):before {
  padding: 0;
  left: -25px;
  display: inline-block;
  position: absolute;
  top: 8px;
  content: '';
  width: 8px;
  height: 8px;
  border-radius: 8px;
  background-color: #4A545E;
}

.c0 > li.has-icon svg {
  padding: 0;
  left: -28px;
  top: 4px;
  display: inline-block;
  position: absolute;
  width: 16px;
  height: 16px;
}

<ul
  class="c0"
>
  <li>
    I am a list item
  </li>
</ul>
`;

exports[`<List /> renders nested lists 1`] = `
.c0 {
  padding-left: 28px;
  counter-reset: list-counter;
}

.c0 > li:not(.has-icon):before {
  padding: 0;
  left: -25px;
  display: inline-block;
  position: absolute;
  top: 8px;
  content: '';
  width: 8px;
  height: 8px;
  border-radius: 8px;
  background-color: #4A545E;
}

.c0 > li.has-icon svg {
  padding: 0;
  left: -28px;
  top: 4px;
  display: inline-block;
  position: absolute;
  width: 16px;
  height: 16px;
}

.c1 {
  position: relative;
  counter-increment: list-counter;
  list-style: none;
  padding: 0;
}

<ul
  class="c0"
>
  <li
    class="c1"
  >
    <p>
      I am a list item
    </p>
    <ul
      class="c0"
    >
      <li
        class="c1"
      >
        <p>
          I am a list item
        </p>
      </li>
    </ul>
  </li>
</ul>
`;

exports[`<List /> renders with icon 1`] = `
.c0 {
  padding-left: 28px;
  counter-reset: list-counter;
}

.c0 > li:not(.has-icon):before {
  padding: 0;
  left: -25px;
  display: inline-block;
  position: absolute;
  top: 1px;
  content: counter(list-counter) ". ";
  color: #4A545E;
  font-size: 15px;
}

.c0 > li.has-icon svg {
  padding: 0;
  left: -28px;
  top: 4px;
  display: inline-block;
  position: absolute;
  width: 16px;
  height: 16px;
}

.c1 {
  position: relative;
  counter-increment: list-counter;
  list-style: none;
  padding: 0;
}

<ol
  class="c0"
>
  <li
    class="c1 has-icon "
  >
    <svg
      aria-hidden="true"
      class="svg-inline--fa fa-mug-saucer "
      data-icon="mug-saucer"
      data-prefix="fas"
      focusable="false"
      role="img"
      viewBox="0 0 640 512"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M512 32H120c-13.25 0-24 10.75-24 24L96.01 288c0 53 43 96 96 96h192C437 384 480 341 480 288h32c70.63 0 128-57.38 128-128S582.6 32 512 32zM512 224h-32V96h32c35.25 0 64 28.75 64 64S547.3 224 512 224zM560 416h-544C7.164 416 0 423.2 0 432C0 458.5 21.49 480 48 480h480c26.51 0 48-21.49 48-48C576 423.2 568.8 416 560 416z"
        fill="currentColor"
      />
    </svg>
    I am a list item
  </li>
</ol>
`;
